<resources>
    <string name="app_name">Treasure Quest</string>
    <string name="action_settings">Settings</string>
    <string name="introduction_title">Treasure Quest</string>
    <string name="welcoming">Welcome you brave person, a great adventure is waiting for you..."</string>
    <string name="start">Start</string>
    <string name="continueButton">Continue</string>
    <string name="acceptButton">Accept</string>
    <string name="declineButton">Decline</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_simple_puzzle">SimplePuzzleActivity</string>
    <string name="title_activity_text_select">TextSelectActivity</string>
    <string name="title_activity_image_select">ImageSelectActivity</string>
    <string name="title_activity_finish">FinishActivity</string>
    <string name="answer_question">Answer question</string>
    <string name="finished">Congratulations! You have found the treasure! This marks the end of the game. Hope you enjoyed it.</string>
    <string name="introduction_string">You are a citizen in a medieval town where there have been rumors about a treasure...</string>
    <string name="rules_string">You have to follow the markers that each lead to a new place, where you will be presented with a task that you have to complete. Once you have visited all the places and have completed the challanges, you will find the location of the treasure. Inbetween the markers there are random encounters where you can win or lose something.</string>
    <string name="title_activity_challenge">ChallengeActivity</string>
    <string name="forest_text">You arrive at a magical forest and notice that there are mushrooms all over the floor. You want to pick some to make dinner later. Mother’s voice echoes in the back of your mind “Mushrooms are very tasteful, but beware of the poisonous ones!”</string>
    <string name="tavern_text">After making your way through the forest you start to feel tired and need a refreshment. You see a tavern in the distance and make your way over there. In the tavern there is a party going on and you go to order a drink.</string>
    <string name="blacksmith_text">All rested up, you decide that you want to buy a sword to help you in your quest to find the treasure. Legends say that a dragon is guarding the treasure and a weapon would definitely come in handy to fight off any threats. As you arrive at the blacksmith, he shows you a great collection of swords he has for sale. You ask him how someone could defeat a dragon and he tells you “If you can guess how many swords I have in my shop, I will reward you with one of my greatest swords.</string>
    <string name="library_text">You decide that you need to acquire more knowledge of dragons before you can face one, so you go to the library to study more about dragons and how to defeat them. As you start reading the books, you see a strange puzzle that seems to hold the answer you are looking for.</string>
    <string name="market_text">You start getting hungry and want to buy some food at the local marketplace. You walk up to a stand selling food and take a good look at everything he has displayed. It looks like some food has been standing out in the open for a while. You hear women talking about a tournament going on further in town. You decide to head to the tournament after you eat your food.</string>
    <string name="church_text">On your way to the tournament you hear the clocks of the church ringing and go have a look at the church.</string>
    <string name="tournament_text">Finally you arrive at the tournament and you see that knights are fighting it out in the arena on horseback. You know that there is usually a lot of gambling going on in these tournaments and go to the register to check out which knights are playing. The clerk asks you if you want to place a bet.</string>
    <string name="castle_text">The treasure has been revealed and you make your way to the castle.</string>
</resources>
