<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.casper.firstapp.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="@color/startBackground"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:id="@+id/treasuremap"
        android:src="@drawable/treasuremap"
        android:background="@drawable/parchement_1"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/introduction_title"
        android:textColor="@color/colorPrimaryDark"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display3"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@color/colorPrimary"
        />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcoming"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"

        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginBottom="@dimen/button_margin_bottom"
        android:onClick="startTheGame"
        />
</RelativeLayout>
