<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/parchement_1"
        />



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:text="@string/blacksmith_text"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="20dp"
        android:id="@+id/blacksmithText"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/treasuremap"
        android:src="@drawable/blacksmith"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/blacksmithText"
        android:layout_marginTop="10dp"

        />

    <Button
        android:id="@+id/button_accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acceptButton"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@id/button_accept"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="30dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorPrimaryDark"
        android:onClick="startTheGame"
        />

    <Button
        android:id="@+id/button_decline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/declineButton"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/button_accept"
        android:layout_marginBottom="30dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorPrimaryDark"
        android:onClick="cancelTheGame"
        />


</RelativeLayout>